<resources>
    <string name="app_name">My BMI</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="weight">Weight</string>
    <string name="_0">0</string>
    <string name="kg">KG</string>
    <string name="height">Height</string>
    <string name="cm">CM</string>
    <string name="calculate">Calculate</string>
    <string name="normal_range_is_18_5_24_9">Normal Range is 18.5 – 24.9</string>
</resources>